--- a/templates/app.html
+++ b/templates/app.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Banglore Home Price Prediction</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="app.js"></script>
+	<link rel="stylesheet" href="app.css">
 
+</head>
+<body>
+<div class="img">
+<div class="row">
+<div class="column">
+    <h1 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;font-size: 40px;height: 35px;border-radius: 5px;position:relative; left:250px; top:150px;">CAR Price Prediction</h1>
+    <div class="author"><p>Created by Ranvirsing Sisodiya</p></div>
+    <form class="est">
+	<button class="submit" onclick="onClickedEstimatePrice()" type="button" >Estimate Price</button>
+	<div id="uiEstimatedPrice" class="result"><h1></h1> </div></form>
+</div>
+<div class="column">
+<form class="form">
+    
+	<h2 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Year Used</h2>
+    <input class="year"  type="text" id="uiyear" class="floatLabel" name="years" value="5">
+	
+	<h2 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Fuel Type</h2>
+	
+       <select class="fuel" name="" id="uifuel">
+       <option value="" disabled="disabled" selected="selected">Choose a Fuel Type</option>
+      <option>Petrol</option>
+      <option>Diesel</option>
+      <option>LPG</option>
+      <option>CNG</option>
+      </select>
+   
+   
+   <h2 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Kilometer Driven</h2>
+    <input class="km"  type="text" id="uikm" class="floatLabel" name="kms" value="50000">
+	
+	<h2 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Transmission Type</h2>
+	
+       <select class="tran" name="" id="uitran">
+       <option value="" disabled="disabled" selected="selected">Select</option>
+      <option>Automatic</option>
+      <option>Manual</option>
+      </select>
+   
+   <h2 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Mileage</h2>
+    <input class="mileage"  type="text" id="uimileage" class="floatLabel" name="ml" value="20">
+   
+</form>
+
+</div></div></div>
+</body>
+</html>
