--- a/static/app.css
+++ b/static/app.css
@@ -6,11 +6,12 @@
 	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
 	line-height: 1.5;
 	margin: 100px auto;
+	
 }
 
 .column {
-  float: left;
-  width: 50%;
+  float: top;
+  height: 300px;
 }
 
 /* Clear floats after the columns */
@@ -108,7 +109,7 @@ h2 {
 		height: 35px;
 		border-radius: 5px;
 		position:relative; 
-		left:315px; 
+		left:330px; 
 		top:150px;
 }
 .submit{
