--- a/templates/app.html
+++ b/templates/app.html
@@ -4,14 +4,14 @@
     <title>Banglore Home Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="app.js"></script>
-	<link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
+	<link rel="stylesheet" href="app.css">
 
 </head>
 <body>
 <div class="img">
 <div class="row">
 <div class="column">
-    <h1 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;font-size: 40px;height: 35px;border-radius: 5px;position:relative; left:250px; top:150px;">CAR Price Prediction</h1>
+    <h1 style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;font-size: 40px;height: 35px;border-radius: 5px;position:relative; left:260px; top:150px;margin: 100px auto;">CAR Price Prediction</h1>
     <div class="author"><p>Created by Ranvirsing Sisodiya</p></div>
     <form class="est">
 	<button class="submit" onclick="onClickedEstimatePrice()" type="button" >Estimate Price</button>
