--- a/static/app.css
+++ b/static/app.css
@@ -148,9 +148,9 @@ h2 {
 }
 .img {
   position: absolute;
+  max-width: 720px;
   left:0;
   top:0;
-  width:100%;
   height:100vh;
   animation: animate 16s ease-in-out infinite;
   background-size:cover;
