--- a/static/app.css
+++ b/static/app.css
@@ -2,15 +2,15 @@
 
 
 .form {
+	width: 100%;
 	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
 	line-height: 1.5;
 	margin: 100px auto;
-	
 }
 
 .column {
-  float: left;
-  width: 100%;
+  float: top;
+  height: 100px;
 }
 
 /* Clear floats after the columns */
@@ -23,7 +23,7 @@
 h2 {
 	font-size: 18px;
 	margin-bottom: 8px;
-        text-align: center;
+    text-align: center;
     
 }
 .year{
@@ -33,7 +33,7 @@ h2 {
   border-radius: 10px;
   border-color: #00c2ba;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
 }
@@ -48,7 +48,7 @@ h2 {
   border-radius: 10px;
   border-color: #00c2ba;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
 }
@@ -63,7 +63,7 @@ h2 {
   border-radius: 10px;
   border-color: #00c2ba;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
 }
@@ -78,7 +78,7 @@ h2 {
   border-radius: 10px;
   border-color: #00c2ba;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
 }
@@ -93,7 +93,7 @@ h2 {
   border-radius: 10px;
   border-color: #00c2ba;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
 }
@@ -108,7 +108,7 @@ h2 {
 		height: 35px;
 		border-radius: 5px;
 		position:relative; 
-		left:330px; 
+		left:315px; 
 		top:150px;
 }
 .submit{
@@ -119,7 +119,7 @@ h2 {
   border-color: #00c2ba;
   margin: 25px 0 10px;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 15px;
   height: 35px;
   text-align: center;
   color: white;
@@ -147,9 +147,9 @@ h2 {
 }
 .img {
   position: absolute;
-  width: 100%;
   left:0;
   top:0;
+  width:100%;
   height:100vh;
   animation: animate 16s ease-in-out infinite;
   background-size:cover;
